--- a/AlcoolouGasolina/app/src/main/res/layout/activity_main.xml
+++ b/AlcoolouGasolina/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:gravity="center_horizontal"
-        android:text="Resultadoo"
+        android:text="Resultado"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
